Update EM vacancy to point to Shreyas

--- a/data/team_members/person/b/bhrai.yml
+++ b/data/team_members/person/b/bhrai.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/">Senior Backend Engineer,
   Fulfillment:Purchase</a>
-reports_to: fullstack-engineering-manager-self-service-purchase
+reports_to: shreyasagarwal
 picture: bishwa.jpg
 pronouns: he/him
 pronunciation:
