--- a/data/team_members/person/s/shreyasagarwal.yml
+++ b/data/team_members/person/s/shreyasagarwal.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/management/fullstack-manager/">
   Engineering Manager (Interim), Fulfillment:Purchase</a>
-reports_to: ragnar-hardarson
+reports_to: jeromeng
 picture: shreyasagarwal.jpg
 twitter:
 gitlab: shreyasagarwal
