--- a/data/team_members/person/v/vvempati.yml
+++ b/data/team_members/person/v/vvempati.yml
@@ -3,7 +3,7 @@ name: Vamsi Vempati
 country: Remote
 role: <a href="/job-families/engineering/development/frontend/">Senior Frontend Engineer,
   Fulfillment:Purchase</a>
-reports_to: fullstack-engineering-manager-self-service-purchase
+reports_to: shreyasagarwal
 picture: vamsivempati.jpg
 pronouns: she/her
 pronunciation: Vum.cee
