--- a/data/team_members/vacancy/backend-engineer-package-package-1.yml
+++ b/data/team_members/vacancy/backend-engineer-package-package-1.yml
@@ -4,7 +4,7 @@ placeholder: true
 locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/">Backend Engineer, Package:Package Registry</a>
-reports_to: michelletorres
+reports_to: ckroutil
 picture: ../gitlab-logo-extra-whitespace.png
 twitter:
 gitlab:
