Add maintainers to gitlab-rspec-profiling-stats

--- a/data/team_members/person/a/ash-m.yml
+++ b/data/team_members/person/a/ash-m.yml
@@ -22,6 +22,7 @@ projects:
   gitlab-triage: reviewer
   gitlab-styles: reviewer
   gitlab-dangerfiles: reviewer
+  gitlab-rspec-profiling-stats: maintainer
   quality-pipeline-common: reviewer
   triage-ops: reviewer
 domain_expertise:
