--- a/data/team_members/person/d/ddieulivol.yml
+++ b/data/team_members/person/d/ddieulivol.yml
@@ -24,6 +24,7 @@ projects:
   gitlab-qa: reviewer
   gitlab-styles: reviewer
   gitlab-triage: reviewer
+  gitlab-rspec-profiling-stats: reviewer
   quality-pipeline-common: reviewer
   triage-ops: maintainer
 specialty: Engineering Productivity
