--- a/data/team_members/person/l/lin.yml
+++ b/data/team_members/person/l/lin.yml
@@ -22,6 +22,7 @@ projects:
   gitlab-triage: maintainer
   gitlab-styles: maintainer
   gitlab-dangerfiles: maintainer
+  gitlab-rspec-profiling-stats: reviewer
   quality-pipeline-common: maintainer
   triage-ops: maintainer
 expertise: |
