--- a/data/team_members/person/n/nao.hashizume.yml
+++ b/data/team_members/person/n/nao.hashizume.yml
@@ -23,6 +23,7 @@ projects:
   gitlab-styles: reviewer
   gitlab-dangerfiles: reviewer
   gitlab-development-kit: reviewer
+  gitlab-rspec-profiling-stats: reviewer
   quality-pipeline-common: reviewer
   triage-ops: reviewer
 expertise:
