--- a/data/team_members/person/a/alinamihaila.yml
+++ b/data/team_members/person/a/alinamihaila.yml
@@ -27,6 +27,7 @@ projects:
   gitlab-triage: reviewer
   gitlab-styles: reviewer
   gitlab-dangerfiles: reviewer
+  gitlab-rspec-profiling-stats: maintainer
   triage-ops: maintainer
 story: |
   Alina grew up in country side in the heart of Transylvania, she started to work as a developer at the age of 21 in an outsourcing company. After going to the office for 5 years she decided to take of her own and work remotely.
