--- a/data/team_members/person/j/jennli.yml
+++ b/data/team_members/person/j/jennli.yml
@@ -21,6 +21,7 @@ projects:
   gitlab-triage: reviewer
   gitlab-styles: reviewer
   gitlab-dangerfiles: reviewer
+  gitlab-rspec-profiling-stats: maintainer
   quality-pipeline-common: reviewer
   triage-ops: reviewer
 expertise:
