--- a/data/team_members/person/e/emccrann.yml
+++ b/data/team_members/person/e/emccrann.yml
@@ -1,7 +1,7 @@
 name: Eugene McCrann
 locality:
 country: Remote
-role: <a href="/job-families/legal-and-corporate-affairs/legal-counsel/">Legal Counsel</a>
+role: <a href="/job-families/legal-and-corporate-affairs/legal-counsel/#senior-legal-counsel">Senior Legal Counsel</a>
 reports_to: lynseysayers
 picture: eugenemccrann.jpg
 pronouns:
@@ -15,6 +15,6 @@ departments:
 specialty: 
 expertise:
 story: >
-  Eugene joins GitLab with 7 years of experience as an attorney, focusing on data privacy and technology matters.  He grew up in small town Nebraska, then attended school in New York City and eventually settled in Los Angeles in 2013, where he currently resides with his wife and two cats.  Previously, Eugene advised on privacy issues in approximately 90 jurisdictions, and he's excited to contribute to the future success of GitLab.  During his spare time, Eugene likes to play basketball and golf, read, and write thoughts in an obscure internet film group that champions Criterion releases and print screenings. 
+  Eugene joins GitLab with 7 years of experience as an attorney, focusing on data privacy matters.  He settled in Los Angeles in 2013, where he currently resides with his wife, daughter and two cats.  During his spare time, Eugene likes to play basketball and golf, read, and write thoughts on film. 
 
 
