updating reports to: slug

--- a/data/team_members/person/s/shensiek.yml
+++ b/data/team_members/person/s/shensiek.yml
@@ -3,7 +3,7 @@ name: Sarah Hensiek
 locality:
 country: Remote
 role: <a href="/job-families/people-ops/people-connect/">People Connect Lead</a>
-reports_to: mpatel8
+reports_to: ameeks
 picture: sarahhensiekNEW.jpg
 pronouns: she/her
 pronunciation:
