Ops management structure changes

--- a/data/team_members/person/c/crystalpoole.yml
+++ b/data/team_members/person/c/crystalpoole.yml
@@ -2,9 +2,8 @@
 name: Crystal Poole
 locality:
 country: Remote
-role: <a href="/job-families/engineering/development/management/fullstack-manager/">Fullstack
-  Engineering Manager, Monitor:Respond</a>
-reports_to: danielcroft
+role: <a href="/job-families/engineering/development/management/senior-manager/">Acting Senior Engineering Manager, Continuous Delivery</a>
+reports_to: samgoldstein
 picture: crystalpoole.png
 twitter:
 gitlab: crystalpoole
