--- a/data/team_members/person/n/nklick.yml
+++ b/data/team_members/person/n/nklick.yml
@@ -2,8 +2,8 @@
 name: Nicholas Klick
 locality:
 country: Remote
-role: <a href="/job-families/engineering/backend-engineer/">Engineering Manager, Monitor:Observability</a>
-reports_to: danielcroft
+role: <a href="/job-families/engineering/backend-engineer/">Engineering Manager, Monitor:Observability</a> and <a href="/job-families/engineering/development/backend/manager/">Acting Backend Engineering Manager, Verify:Runner SaaS</a>
+reports_to: nicole-williams
 picture: nicholas-klick.png
 twitter:
 gitlab: nicholasklick
