--- a/data/team_members/vacancy/senior-engineering-manager-ops.yml
+++ b/data/team_members/vacancy/senior-engineering-manager-ops.yml
@@ -1,5 +1,5 @@
 ---
-name: New Vacancy (Nicole Williams - Acting Senior EM)
+name: New Vacancy (Crystal Poole - Acting Senior EM)
 placeholder: true
 locality:
 country: Remote
