--- a/data/team_members/person/e/elliot-rushton.yml
+++ b/data/team_members/person/e/elliot-rushton.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/management/#fullstack-manager">Fullstack
   Engineering Manager, Verify:Runner</a>
-reports_to: danielcroft
+reports_to: nicole-williams
 picture: elliotrushton.jpg
 twitter:
 gitlab: erushton
