--- a/data/team_members/vacancy/backend-engineering-manager-runner-saas.yml
+++ b/data/team_members/vacancy/backend-engineering-manager-runner-saas.yml
@@ -1,10 +1,10 @@
 ---
-name: New Vacancy
+name: New Vacancy (Nicholas Klick - Acting Backend EM)
 placeholder: true
 locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/manager/">Backend Engineering Manager, Verify:Runner SaaS</a>
-reports_to: danielcroft
+reports_to: nicole-williams
 picture: ../gitlab-logo-extra-whitespace.png
 twitter:
 gitlab:
