Correct alperakgun.yml manager

--- a/data/team_members/person/a/alperakgun.yml
+++ b/data/team_members/person/a/alperakgun.yml
@@ -3,8 +3,8 @@ name: Alper Akgun
 locality:
 country: Remote
 role: <a href="/job-families/engineering/development/fullstack/">Staff Fullstack Engineer</a>,
-  Analytics
-reports_to: dennis
+  ModelOps:Applied ML
+reports_to: monmayuriray
 picture: aakgun.jpg
 twitter:
 gitlab: a_akgun
