--- a/data/domain_expertise.yml
+++ b/data/domain_expertise.yml
@@ -247,3 +247,6 @@ webpack:
 wiki:
   display_name: Wiki
   link: https://docs.gitlab.com/ee/user/project/wiki/
+mergeability:
+  display_name: Mergeability
+  link: https://gitlab.com/groups/gitlab-org/-/epics/5598
