Updating team members moved to dcurlewis

--- a/data/team_members/person/f/fshabir.yml
+++ b/data/team_members/person/f/fshabir.yml
@@ -2,7 +2,7 @@ name: Furhan Shabir
 locality:
 country: Remote
 role: <a href="/job-families/engineering/infrastructure/site-reliability-engineer/">Senior Site Reliability Engineer</a>, Systems:Gitaly
-reports_to: amoter
+reports_to: dcurlewis
 picture: furhanshabir.jpg
 pronouns:
 pronunciation:
