--- a/data/team_members/person/n/nduff.yml
+++ b/data/team_members/person/n/nduff.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/infrastructure/site-reliability-engineer/">Senior
   Site Reliability Engineer</a>
-reports_to: dave-smith
+reports_to: dcurlewis
 picture: nduff.jpg
 pronouns: he/him
 pronunciation:
