--- a/data/team_members/person/s/sarahwalker.yml
+++ b/data/team_members/person/s/sarahwalker.yml
@@ -2,7 +2,7 @@ name: Sarah Walker
 locality: 
 country: Remote
 role: <a href="">Site Reliability Engineer</a>
-reports_to: amoter
+reports_to: dcurlewis
 picture: sarahwalker.jpg
 pronouns: they/them
 pronunciation: sare-rah
