Update my team member entry

--- a/data/team_members/person/j/jgaughan.yml
+++ b/data/team_members/person/j/jgaughan.yml
@@ -3,15 +3,17 @@ locality:
 country: Remote
 role: <a href="">Support Engineer</a>
 reports_to: ronnie-alfaro
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
-pronunciation:
+picture: johngaughan.jpg
+pronouns: he / him
+pronunciation: john gay-gan
 twitter:
-linkedin:
+linkedin: johngaughan3
 gitlab: jgaughan
 departments:
   - Customer Support
 specialty: ""
 expertise:
-story:
+story: John has a background in Rails development and customer-facing roles. He loves helping people solve practical problems, and gaining broader insights into the tech stack and best practices in the process. Outside of work, he enjoys taking long walks with his wife, biking, reading, and discussing technology, science, and movies.
+
+
 
