Standardize CSM department for all CSMs

--- a/data/team_members/person/a/arhampton.yml
+++ b/data/team_members/person/a/arhampton.yml
@@ -10,7 +10,8 @@ twitter:
 linkedin:
 gitlab: arhampton
 departments:
-  - CSM
+  - Customer Success
+  - Customer Success Managers
 specialty: ""
 expertise:
 story:
