--- a/data/team_members/person/b/billydowning.yml
+++ b/data/team_members/person/b/billydowning.yml
@@ -11,6 +11,8 @@ linkedin: billy-downing
 gitlab: billydowning
 departments:
   - PubSec
+  - Customer Success
+  - Customer Success Managers
 specialty: ""
 expertise:
 story:
