--- a/data/team_members/person/c/christiaanconover.yml
+++ b/data/team_members/person/c/christiaanconover.yml
@@ -9,7 +9,7 @@ twitter:
 gitlab: christiaanconover
 departments:
 - Customer Success
-- Customer Success Management
+- Customer Success Managers
 - Project Management Group CS Stable Counterpart
 - Portfolio Management Group CS Stable Counterpart
 - Certify Group CS Stable Counterpart
