--- a/data/team_members/person/d/dthompson3.yml
+++ b/data/team_members/person/d/dthompson3.yml
@@ -11,6 +11,7 @@ linkedin:
 gitlab: dthompson3
 departments:
   - Customer Success
+  - Customer Success Managers
 specialty: 
 expertise:
 story: >
