--- a/data/team_members/person/d/dturner.yml
+++ b/data/team_members/person/d/dturner.yml
@@ -10,7 +10,8 @@ twitter:
 linkedin:
 gitlab: dturner
 departments:
-  - CSM
+  - Customer Success
+  - Customer Success Managers
 specialty: ""
 expertise:
 story:
