--- a/data/team_members/person/f/fsieverding.yml
+++ b/data/team_members/person/f/fsieverding.yml
@@ -11,6 +11,7 @@ linkedin: falko-sieverding-universalamateur
 gitlab: fsieverding
 departments:
   - Customer Success
+  - Customer Success Managers
 specialty: "Customer Success"
 expertise:
 story:
