--- a/data/team_members/person/g/gmarino-gitlab.yml
+++ b/data/team_members/person/g/gmarino-gitlab.yml
@@ -11,6 +11,7 @@ linkedin: georgegmarino
 gitlab: gmarino-gitlab
 departments:
   - Customer Success
+  - Customer Success Managers
   - Sales
 specialty: 
 expertise:
