--- a/data/team_members/person/j/jess_perry.yml
+++ b/data/team_members/person/j/jess_perry.yml
@@ -10,7 +10,8 @@ twitter:
 linkedin: jess-perry
 gitlab: jess_perry
 departments:
-  - CSM
+  - Customer Success
+  - Customer Success Managers
 specialty: ""
 expertise:
 story: |
