--- a/data/team_members/person/j/jesswang_gitlab.yml
+++ b/data/team_members/person/j/jesswang_gitlab.yml
@@ -10,7 +10,8 @@ twitter:
 linkedin: jessicadwang
 gitlab: jesswang_gitlab
 departments:
-  - CSM
+  - Customer Success
+  - Customer Success Managers
 specialty: "Customer Success"
 expertise:
 story:
