--- a/data/team_members/person/j/jgreen11.yml
+++ b/data/team_members/person/j/jgreen11.yml
@@ -10,7 +10,8 @@ twitter:
 linkedin:
 gitlab: jgreen11
 departments:
-  - CSM
+  - Customer Success
+  - Customer Success Managers
 specialty: ""
 expertise:
 story:
