--- a/data/team_members/person/k/klaraagitlab.yml
+++ b/data/team_members/person/k/klaraagitlab.yml
@@ -10,7 +10,8 @@ twitter:
 linkedin:
 gitlab: klaraagitlab
 departments:
-  - CSM
+  - Customer Success
+  - Customer Success Managers
 specialty: "Customer Success"
 expertise:
 story:
