--- a/data/team_members/person/l/lhan.yml
+++ b/data/team_members/person/l/lhan.yml
@@ -11,6 +11,7 @@ linkedin:
 gitlab: lauhan
 departments:
   - Customer Success
+  - Customer Success Managers
 expertise:
 story: Lauren has spent her entire career in Customer Success, leading with a customer first mentality with a simple goal - to provide a stellar customer experience. Outside of work, she takes being a foodie very seriously and watches a lot of true-crime television. 
 
