--- a/data/team_members/person/m/mdhakolia.yml
+++ b/data/team_members/person/m/mdhakolia.yml
@@ -11,6 +11,7 @@ linkedin: mukuldhakolia
 gitlab: mdhakolia
 departments:
   - Customer Success
+  - Customer Success Managers
 specialty: "Customer Success"
 expertise:
 story:
