--- a/data/team_members/person/n/nwilson-gitlab.yml
+++ b/data/team_members/person/n/nwilson-gitlab.yml
@@ -10,7 +10,8 @@ twitter:
 linkedin: https://www.linkedin.com/in/nicholaswilson05/
 gitlab: nwilson-gitlab
 departments:
-  - CSM
+  - Customer Success
+  - Customer Success Managers
 specialty: "Customer Success"
 expertise:
 story:
