--- a/data/team_members/person/t/tammgr-michael-le.yml
+++ b/data/team_members/person/t/tammgr-michael-le.yml
@@ -9,7 +9,7 @@ twitter:
 gitlab: mrleutz
 departments:
 - Customer Success
-- Customer Success Management
+- Customer Success Managers
 story: 'Michael has a consulting and technology background. He is passionate about
   growing teams and helping customers achieve their goals with digital technologies.
   Michael enjoys good food and travelling to the mountains.
