--- a/data/team_members/person/t/tiffanymcatee.gitlab.yml
+++ b/data/team_members/person/t/tiffanymcatee.gitlab.yml
@@ -10,8 +10,9 @@ twitter:
 linkedin: https://www.linkedin.com/in/tiffany-mcatee-a73334a/
 gitlab: tiffanymcatee.gitlab
 departments:
-  - CSM
-specialty: ""
+  - Customer Success
+  - Customer Success Managers
+specialty: 
 expertise:
 story:
 
