--- a/data/team_members/person/t/tstacks.yml
+++ b/data/team_members/person/t/tstacks.yml
@@ -10,8 +10,9 @@ twitter:
 linkedin:
 gitlab: tstacks
 departments:
-  - CSM
-specialty: ""
+  - Customer Success
+  - Customer Success Managers
+specialty: 
 expertise:
 story:
 
