--- a/data/team_members/person/t/tamdir-sherrod-p.yml
+++ b/data/team_members/person/t/tamdir-sherrod-p.yml
@@ -10,7 +10,7 @@ twitter: sherrodpatching
 gitlab: spatching
 departments:
 - Customer Success
-- Customer Success Management
+- Customer Success Managers
 story: 'Sherrod has been leading teams for the past 20 years and technical customer
   success teams for the past 13 years. She is passionate about people and a process/frameworks
   junkie. Sherrod used to have spare time and dabbled in music, but now she just runs
