--- a/data/team_members/person/z/zchua-gtlb.yml
+++ b/data/team_members/person/z/zchua-gtlb.yml
@@ -11,7 +11,7 @@ linkedin: zanejchua
 gitlab: zchua-gtlb
 departments:
   - Customer Success
-  - Customer Success Management
+  - Customer Success Managers
 specialty: 
 expertise:
 story: Zane enjoys solving problems that have ambguity in them and likes to take up the challenge especially when someone says that it can't be achieved. In his free time, he regularly contributes to Open Source when possible, working on his HomeLab and recently has been figuring out how to grow more varieties of banana plants.
