Update David to be a GitLab pipeline maintainer

--- a/data/team_members/person/d/ddieulivol.yml
+++ b/data/team_members/person/d/ddieulivol.yml
@@ -17,6 +17,7 @@ departments:
 - Engineering Productivity Team
 projects:
   gitlab:
+  - maintainer pipeline
   - reviewer backend
   - reviewer tooling
   gitlab-build-images: reviewer
