Update Michelle Gill's title

--- a/data/team_members/person/m/michellegill.yml
+++ b/data/team_members/person/m/michellegill.yml
@@ -4,8 +4,8 @@ locality:
 pronunciation: mih-SHELL gih-l
 pronouns: she/her
 country: Remote
-role: <a href="/job-families/engineering/development/management/#senior-engineering-manager">Senior
-  Manager, Engineering</a>, Manage
+role: <a href="/job-families/engineering/development/management/#director-of-engineering">Director
+  of Engineering, Manage</a>
 reports_to: tim-z
 picture: michellegill.jpg
 twitter:
